# Entropy

./: ArithmeticCodingRational.hs  HaskellAC  ShannonFano.hs  entropy.cabal  stack.yaml
app/: .Main.hs.swo  .Main.hs.swp  Main.hs
src/: .Entropy.hs.swn  .Entropy.hs.swo  .Entropy.hs.swp  ArithmeticCoding.hs  ArithmeticCodingMonadList.hs  Entropy.hs  Huffman.hs  ShannonFano.hs  Stat.hs  Types.hs
