name:                entropy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/entropy#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Entropy
  build-depends:       base >= 4.7 && < 5
                     , primes
                     , containers
                     , plot
                     , plots
                     --, haskell-plot
                     , diagrams-lib
                     , diagrams-core
                     , diagrams-svg
                     , data-default
                     , lens >=3.10
                     , data-default >=0.5
                     , diagrams-lib >=1.3
                     , diagrams-cairo >=1.3
                     , diagrams-contrib >=1.3
                     , palette
                     , colour
                     , containers
                     , unordered-containers
                     , mtl
                     , clustering
                     , void
                     , vector
                     , random
                     , split
                     , linear
  default-language:    Haskell2010

executable entropy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , entropy
                     , diagrams-cairo
                     , diagrams-lib 
                     , vector
                     , linear
                     , lens
                     , plots
  default-language:    Haskell2010

test-suite entropy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/entropy
